# ocaml-bakery

./: .cirrus.yml  .drone.yml  .gitattributes  .gitignore  .gitmodules  bakery-macaroons.opam  bakery.opam  bakery_macaroons.opam  dune-project  libmacaroons.opam
.github/workflows/: build.yml  fuzz.yml
libmacaroons/config/: discover.ml  dune
libmacaroons/ffi/bindings/: .merlin  dune  libmacaroons_bindings.ml
libmacaroons/ffi/lib/: .merlin  dune  m.ml
libmacaroons/ffi/stubgen/: .merlin  dune  ffi_stubgen.ml
libmacaroons/fuzz/: dune  libmacaroons_fuzz.ml
libmacaroons/fuzz/input/: start
libmacaroons/lib/: .merlin  base64.ml  base64.mli  caveat.ml  caveat.mli  dune  libmacaroons.ml  libmacaroons.mli  macaroon.ml  macaroon.mli  utils.ml  verifier.ml  verifier.mli
libmacaroons/test/: .merlin  dune  readme_tests.ml  test.ml  test_b64.ml  test_rename.ml  test_root_v1.ml  test_root_v2.ml  test_serialize.ml  test_verifier.ml  test_verifier_v1.ml  test_verifier_v2.ml  utils.ml
libmacaroons/types/bindings/: dune  libmacaroons_bindings_types.ml  libmacaroons_bindings_types.mli
libmacaroons/types/lib/: dune  m.ml
libmacaroons/types/stubgen/: dune  ffi_types_stubgen.ml
macaroons-tester/: dune  readme_test.ml  sig.ml  test_root_v1.ml  test_serialize.ml  test_verifier_v1.ml  tester.ml  utils.ml
macaroons/src/: caveat.ml  caveat.mli  crypto.ml  dune  macaroon.ml  macaroon.mli  macaroon_intf.ml  parser_utils.ml  verifier.ml  verifier.mli
macaroons/test/: Test_readme.ml  dune  test.ml
test-harness/: readme_test.ml
