opam-version: "2.0"
version: "0.1.0"
synopsis: "OCaml implementation of Macaroons cryptographic protocol"
maintainer: ["nicholas.a.robison@omb.eop.gov"]
authors: ["Nick Robison"]
license: "MIT"
homepage: "https://github.com/nickrobison-usds/ocaml-bakery"
dev-repo: "git+https://github.com/nickrobison-usds/ocaml-bakery.git"
bug-reports: "https://github.com/nickrobison-usds/ocaml-bakery/issues"
depends: [
  "dune" {>= "2.7"}
  "base64"
  "nocrypto"
  "hex"
  "faraday"
  "varint"
  "angstrom"
  "eqaf"
  "ppx_deriving"
  "fmt"
  "alcotest" {with-test}
  "crowbar" {with-test}
  "ocaml" {> "4.07"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
  name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  "@doc" {with-doc}
  ]
]
