(library
 (name libmacaroons_ffi)
 (public_name libmacaroons.ffi)
 (modules g m)
 (foreign_stubs (language c) (names macaroons_stubs))
 (foreign_archives ../../vendor/macaroons)
 (libraries libmacaroons.bindings libmacaroons.types ctypes.stubs ctypes libmacaroons.c))

(rule
 (targets g.ml)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -ml))))

(rule
 (targets macaroons_stubs.c)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -c))))


